--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 #sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql://%(POSTGRES_DB_USER)s:%(POSTGRES_DB_PASS)s@localhost/postgres
+sqlalchemy.url = postgresql://%(POSTGRES_DB_USER)s:%(POSTGRES_DB_PASS)s@localhost/%(POSTGRES_DB_DBNAME)s
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
